Bug #12747: Category and Date shifted 1 cell to the left in the Bulk Edit page.

--- a/static/css/lights-on.css
+++ b/static/css/lights-on.css
@@ -2367,7 +2367,7 @@ body#admin.user_admin #labels {
     float: left;
     width: 650px;
 }
-body#admin.user_admin #labels form > table tr td:first-child, #labels form > table tr th.checkbox {
+body#admin.user_admin #labels form > table tr td:first-child {
     display: none;
 }
 body#admin.user_admin #labels form > table tr.editing td:first-child {
